--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.2",
+    "immer": "^10.1.1",
     "joi": "^17.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "use-immer": "^0.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
